# hERG-facilitation-HEK-modified_tenTusscher2006

./: Makefile.am  Makefile.in  README  config.h.in~  temp
include/: xhplot.h
src/: currents.c  data_out.c  exptable.c  input_para.c  mem.c  syspara.h  system.c  tnnp06.c  tnnp06.c.org  val_constants.c  win_out.c
src/src_ord/: currents.c  data_out.c  exptable.c  input_para.c  mem.c  ord.c  syspara.h  system.c  val_constants.c
